Version 0.3
 - aajm: Took out pointless macros AAWIDTH and AAHEIGHT
 - jmlib: Provide ability to describe all the builtin styles
 - aajm: modified to take advantage of new jmlib feature
 - jmdlx: modified to take advantage of new jmlib feature
 - jmlib: Added "Random" style. Thanks to Barton Chittenden for the
    [ridiculously simple if I'd taken two minutes to think about it]
    pseudocode
 - Added more patterns

Version 0.2
2003-12-11
 - Major addition: AAJM
 - jmdlx: Colored Balls
 - jmdlx: Added Some Patterns
 - jmdlx: "Printing"
 - jmdlx: Miscellaneous small changes/bugfixes
 - jmlib: Fixed dumb tpyo in style nomenclature

Version 0.1
2003-11-10
 - Initial Public Release