@@ -1,13 +1,9 @@
 In this package:
 
-src/jmlib/* is licensed under the JMLib license, please see COPYING.jmlib
-for further details.
+src/jmlib/* is licensed under the Modified BSD License, please see
+COPYING.jmlib for further details.
 
-src/jmdlx/* and src/aajm/* are licensed under the GPL, with modifications
-that allow it to be used with JMLib without causing JMLib to be under
-the GPL also, notably:
-You may link anything in the JMLib dir in the distribution you downloaded
-with any of thses dirs, without JMLib being GPL'd.
+src/jmdlx/* and src/aajm/* are licensed under the GPL
 The full text of the GPL is available in COPYING
 
 Chunky Kibbles
