@@ -1,5 +1,6 @@
 // 	$Id$	
 
+
 /*
  * JMLib - Portable JuggleMaster Library
  * Version 2.0
@@ -8,6 +9,14 @@
  * Based on JuggleMaster Version 1.60
  * Copyright (c) 1995-1996 Ken Matsuoka
  *
+ * You may redistribute and/or modify JMLib under the terms of the
+ * Modified BSD License as published in various places online or in the
+ * COPYING.jmlib file in the package you downloaded.
+ *
+ * This program is distributed in the hope that it will be useful, but
+ * WITHOUT  ANY  WARRANTY;  without   even  the  implied  warranty  of
+ * MERCHANTABILITY or  FITNESS FOR A PARTICULAR PURPOSE.   See the
+ * Modified BSD License for more details.
  */ 
 
 #include "jmlib.h"
