@@ -7,6 +7,7 @@ Version 0.3
     [ridiculously simple if I'd taken two minutes to think about it]
     pseudocode
  - Added more patterns
+ - jmlib: Changed License to Modified BSD, with Ken Matsuoka's permission
 
 Version 0.2
 2003-12-11
